[workspace]
resolver = "3"
members = [
    "jono_core",
    "jono_dispatch",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Priority Job Queue on Redis"
repository = "https://github.com/ruksi/jono-rs"
license = "MIT"

[workspace.dependencies]
redis = { version = "0.29" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
ulid = "1.0"
