[workspace]
resolver = "3"
members = [
    "jono",
    "jono_core",
    "jono_produce",
    "jono_consume",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Ruksi Korpisara <me@ruk.si>"]
repository = "https://github.com/ruksi/jono-rs"
version = "0.1.6-rc.4"

[workspace.metadata.release]
shared-version = true
pre-release-commit-message = "🔖 Become {{version}}"
tag-name = "v{{version}}"
tag-message = ""

[workspace.dependencies]
redis = { version = "0.29" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
ulid = "1.0"
