[package]
name = "jono"
description = "Priority Job Queue on Redis"
readme = "../README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["produce", "consume"]
produce = ["dep:jono_produce"]
consume = ["dep:jono_consume"]

[dependencies]
jono_core = { path = "../jono_core", version = "0.1.6-rc.2" }
jono_produce = { path = "../jono_produce", version = "0.1.6-rc.2", default-features = false, optional = true }
jono_consume = { path = "../jono_consume", version = "0.1.6-rc.2", default-features = false, optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
