[package]
name = "jono"
description = "Priority Queue on Redis"
readme = "../README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["produce", "consume", "harvest"]
produce = ["dep:jono_produce"]
consume = ["dep:jono_consume"]
harvest = ["dep:jono_harvest"]

[dependencies]
jono_core = { path = "../jono_core", version = "=0.1.6-rc.6" }
jono_produce = { path = "../jono_produce", version = "=0.1.6-rc.6", default-features = false, optional = true }
jono_consume = { path = "../jono_consume", version = "=0.1.6-rc.6", default-features = false, optional = true }
jono_harvest = { path = "../jono_harvest", version = "=0.1.6-rc.6", default-features = false, optional = true }

[dev-dependencies]
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
