[package]
name = "jono_core"
description = "Shared core utilities for Jono queue libraries"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
