[package]
name = "jono_core"
description = "Shared types and utilities for Jono queue libraries"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["runtime-tokio", "tls-none"]

# Runtime, choose one
runtime-tokio = ["deadpool-redis/rt_tokio_1", "redis/tokio-comp"]
runtime-async-std = ["deadpool-redis/rt_async-std_1", "redis/async-std-comp"]

# TLS implementation, choose one
tls-none = []
tls-native = ["deadpool-redis/tls-native-tls", "redis/tls-native-tls"]
tls-rustls = ["deadpool-redis/tls-rustls", "redis/tls-rustls",]
tls-rustls-insecure = ["deadpool-redis/tls-rustls-insecure", "redis/tls-rustls-insecure"]
tls-rustls-webpki = ["deadpool-redis/tls-rustls-webpki-roots", "redis/tls-rustls-webpki-roots"]

[dependencies]
redis = { workspace = true, features = ["tokio-comp"] }
deadpool-redis.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
