[package]
name = "jono_produce"
description = "Dispatch interface for submitting jobs to Jono queues"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jono_core = { path = "../jono_core", version = "0.1.5" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
