[package]
name = "jono_produce"
description = "Dispatch interface for submitting jobs to Jono queues"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jono_core = { path = "../jono_core", version = "=0.1.6-rc.3" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
